# mini-games

./: CMakeLists.txt  README.md
src/: game.h  main.cpp
src/interface/: interface.h  menu.cpp  menu.h
src/interface/SpaceWar/: ResourceHolder.h  enemy.cpp  enemy.h  enemys.cpp  enemys.h  object.h  objects.cpp  ship.cpp  ship.h  spaceWar.cpp  spaceWar.h
